--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+:root {
+  --main-orange: #fb7722;
+  --main-black: #000000;
+  --main-white: #ffffff;
+}
